--- a/package.json
+++ b/package.json
@@ -6,18 +6,19 @@
     "start": "next start"
   },
   "dependencies": {
+    "crypto": "^1.0.1",
     "next": "latest",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "uuid": "^8.3.2"
+    "uuid": "8.3.2"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.5",
-    "autoprefixer": "^10.4.7",
-    "postcss": "^8.4.14",
-    "tailwindcss": "^3.1.2",
+    "autoprefixer": "10.4.7",
+    "postcss": "8.4.14",
+    "tailwindcss": "3.1.2",
     "typescript": "4.7.2"
   }
 }
