--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "uuid": "8.3.2"
   },
   "devDependencies": {
-    "@types/node": "17.0.35",
-    "@types/react": "18.0.9",
+    "@types/node": "^18.6.4",
+    "@types/react": "^18.0.15",
     "@types/react-dom": "18.0.5",
     "autoprefixer": "10.4.7",
+    "eslint": "8.21.0",
+    "eslint-config-next": "12.2.4",
     "postcss": "8.4.14",
     "tailwindcss": "3.1.2",
     "typescript": "4.7.2"
