--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 BIANACE_DOMAIN='https://sandbox.bifinitypay.com'
 BIANACE_PRIVATE_KEY_PATH='../../../../rsa_pkcs8.pri'
 BIANACE_PUBLIC_KEY_PATH='../../../../rsa_pkcs8.pub'
+BIANACE_MERCHANT_CODE='solchicks_test'
